fix: Correcting the spacing of the nav tag and adding its colors

--- a/app/static/user.css
+++ b/app/static/user.css
@@ -28,7 +28,17 @@ body {
 .sidebar{
   display: flex;
   flex-direction: column;
+  
   gap: 35px;
+  padding: 35px 20px 0px 0px;
+}
+.sidebar nav{
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.sidebar nav #dashboard{
+  background-color: rgb(20, 77, 78);
 }
 .logo{
   display: flex;
@@ -42,10 +52,13 @@ body {
   justify-content: flex-start;
   align-items: center;
   gap: 17px;
-  margin-left: 35px;
+
+  border-radius: 25px;
+
+  padding: 15px;
 }
 .menu-item:hover{
-  transform: scale(1.1);
+  background-color: rgb(20, 77, 78);
 }
 .text-menuitem{
   text-decoration: none;
@@ -56,6 +69,15 @@ body {
   color: white;
   font-weight: 500;
 }
+.svg-circle{
+  padding: 10px;
+  background-color: rgb(40, 91, 92);
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .centro{
 
   background-color: var(--bg-color);
